fix/ linkedin opens on new tab

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                 <h3 class="icon solid fa-mobile-alt">
                   <span class="label">LinkedIn</span>
                 </h3>
-                <a href="https://www.linkedin.com/in/michaelbarski/"
+                <a
+                  href="https://www.linkedin.com/in/michaelbarski/"
+                  target="_blank"
                   >linkedin.com/in/michaelbarski/</a
                 >
               </li>
