deleted copyright and fixed link opening

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         <header class="major">
           <h2>
             Welcome to my portfolio.<br />
-            Here you can look at the latest projects I've <br />
-            been working on—from data analysis <br />
-            to coding in Python.
+            Projects from data analysis to coding in Python.
           </h2>
         </header>
         <p>
@@ -108,6 +106,7 @@
                 </h3>
                 <a
                   href="mailto:mbarski24@gmail.com?subject = Portfolio Inquiry&body = message"
+                  target="_blank"
                   >mbarski24@gmail.com</a
                 >
               </li>
@@ -441,6 +440,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
           <li>
             <a
               href="https://github.com/michaelbarski"
+              target="_blank"
               class="icon brands fa-github"
               ><span class="label">Github</span></a
             >
@@ -448,6 +448,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
           <li>
             <a
               href="https://www.linkedin.com/in/michaelbarski/"
+              target="_blank"
               class="icon brands fa-linkedin"
               ><span class="label">Dribbble</span></a
             >
@@ -461,7 +462,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
           </li>
         </ul>
         <ul class="copyright">
-          <li>&copy; Michael Barski</li>
           <li><a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </div>
