removed extra articles, edit text, and added a note to the readme

--- a/index.html
+++ b/index.html
@@ -33,46 +33,25 @@
       <!-- One -->
       <section id="one">
         <header class="major">
-          <h2>
-            Welcome to my portfolio.<br />
-            Projects from data analysis to coding in Python.
+          <h1>
+            My Portfolio<br /> </h1>
+            <h2>
+			Projects from data analysis to coding in Python
           </h2>
         </header>
         <p>
-          By and large, I spend most of my day cleaning, manipulating, and
-          analyzing data for my marketing department. This has allowed me to do
-          pretty cool things like creating personalized and automated
-          campaigns—communicating with prospects differently based on which
-          technologies they're using. <br />
-          Recently, I've been working on a data wrangling project—merging
-          company data using probabalistic matching in Python.
+          I spend most of my day cleaning, manipulating, and
+          analyzing data for my marketing department. <br> This has allowed me to do
+          pretty cool things: I've helped design automated
+          campaigns and analyzed customer bases to help update our target market. <br />
+          <br>This portfolio provides a way for me to show my skills with data analysis and coding.<br />
+		  Recently, I've been working on a data wrangling project—merging
+          company data using probabalistic matching in Python. Feel free to check it out!
         </p>
         <ul class="actions">
-          <li><a href="#" class="button">See my latest project</a></li>
+          <li><a href="https://github.com/michaelbarski/merge_data_project" target="_blank" class="button">See my latest project</a></li>
         </ul>
       </section>
-
-      <!-- Two -->
-      <section id="two">
-        <h2>Recent Work</h2>
-        <div class="row">
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/01.jpg" class="image fit thumb"
-              ><img src="images/thumbs/01.jpg" alt=""
-            /></a>
-            <h3>Magna sed consequat tempus</h3>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-          </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/02.jpg" class="image fit thumb"
-              ><img src="images/thumbs/02.jpg" alt=""
-            /></a>
-            <h3>Ultricies lacinia interdum</h3>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-          </article>
-        </div>
-      </section>
-
       <!-- Three -->
       <section id="three">
         <h2>Contact Me</h2>
