--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         /></a>
         <h1>
           <strong>I'm Michael Barski</strong>, a data-centric<br />
-          marketer focused on analytics and research.<br />
+          marketer focused on analytics and marketing research.<br />
         </h1>
       </div>
     </header>
