added background image to H1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         /></a>
         <h1>
           <strong>I'm Michael Barski</strong>, a data-centric<br />
-          marketer focused on analytics and marketing research.<br />
+          marketer focused on analytics & marketing research.<br />
         </h1>
       </div>
     </header>
@@ -33,23 +33,32 @@
       <!-- One -->
       <section id="one">
         <header class="major">
-          <h1>
-            My Portfolio<br /> </h1>
-            <h2>
-			Projects from data analysis to coding in Python
-          </h2>
+          <!-- <div class="image-mountains"></div> -->
+          <h1 class="image-mountains">My Portfolio<br /></h1>
+
+          <h2>Projects from Data Analysis to Coding in Python</h2>
         </header>
         <p>
-          I spend most of my day cleaning, manipulating, and
-          analyzing data for my marketing department. <br> This has allowed me to do
-          pretty cool things: I've helped design automated
-          campaigns and analyzed customer bases to help update our target market. <br />
-          <br>This portfolio provides a way for me to show my skills with data analysis and coding.<br />
-		  Recently, I've been working on a data wrangling project—merging
-          company data using probabalistic matching in Python. Feel free to check it out!
+          I spend most of my day manipulating and analyzing data for my
+          marketing department. <br />
+          This has allowed me to do pretty cool things: I've helped design
+          automated campaigns and analyzed customer bases to help update our
+          target market. <br />
+          <br />This portfolio provides a way for me to show my skills with data
+          analysis and coding.<br />
+          Recently, I've been working on a data wrangling project—merging
+          company data using probabalistic matching in Python. Feel free to
+          check it out!
         </p>
         <ul class="actions">
-          <li><a href="https://github.com/michaelbarski/merge_data_project" target="_blank" class="button">See my latest project</a></li>
+          <li>
+            <a
+              href="https://github.com/michaelbarski/merge_data_project"
+              target="_blank"
+              class="button"
+              >See my latest project</a
+            >
+          </li>
         </ul>
       </section>
       <!-- Three -->
