--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
         </h1>
       </div>
     </header>
+    <div id="banner" class="image-mountains"></div>
 
     <!-- Main -->
     <div id="main">
       <!-- One -->
       <section id="one">
         <header class="major">
-          <!-- <div class="image-mountains"></div> -->
-          <h1 class="image-mountains">My Portfolio<br /></h1>
-
-          <h2>Projects from Data Analysis to Coding in Python</h2>
+          <h2>My Portfolio <br> <br> Projects from Data Analysis to Coding in Python</h2>
         </header>
         <p>
           I spend most of my day manipulating and analyzing data for my
